--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <option value="results">Results</option>
       <option value="changed">Changed</option>
       <option value="gender">Gender</option>
+      <option value="turnout">Turnout</option>
+      <option value="majority">Majority</option>
     </select>
   </form>
 
