Add major cities

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <option value="turnout">Turnout</option>
       <option value="majority">Majority</option>
     </select>
+    <input type="checkbox" id="cities-box">Display Cities<br>
   </form>
 
   <div id="content">
