Implement legends and add README

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         <div class="party-container">
           <img src="" alt="party" class="party-logo">
           <div>
-            <p class="name"></p>
+            <p style="margin: 0">
+              <span class="name"></span> <span class="position"></span>
+            </p>
             <p class="gender"></p>
             <p class="share"></p>
           </div>
