--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   
-  <form>
+  <form class="user-inpput">
     <select id="map-type">
       <option value="results">Results</option>
       <option value="changed">Changed</option>
