Enhance tooltip on changed and render

--- a/index.html
+++ b/index.html
@@ -35,15 +35,24 @@
   <div id="content">
       <div class="tooltip">
         <h1 class="constituency"></h1>
-        <div class="party-container">
-          <img src="" alt="party" class="party-logo">
-          <div>
-            <p style="margin: 0">
-              <span class="name"></span> <span class="position"></span>
-            </p>
-            <p class="gender"></p>
-            <p class="share"></p>
-          </div>
+        <div class="results">
+            <div class="party-container">
+              <img src="" alt="party" class="party-logo">
+              <div>
+                <p style="margin: 0">
+                  <span class="name"></span> <span class="position"></span>
+                </p>
+                <p class="gender"></p>
+                <p class="share"></p>
+              </div>
+            </div>
+        </div>
+        <div class="changed section none">
+            <div class="gain"></div>
+            <div class="lost"></div>
+        </div>
+        <div class="section none gender-div">
+          <h2 class="text" style="text-align: center"><span class="no-candidates"></span> Candidates</h2>
         </div>
       </div>
   </div>
