Enhance tooltip for turnout

--- a/index.html
+++ b/index.html
@@ -52,7 +52,12 @@
             <div class="lost"></div>
         </div>
         <div class="section none gender-div">
-          <h2 class="text" style="text-align: center"><span class="no-candidates"></span> Candidates</h2>
+          <h2 class="text" style="text-align: center"><span class="no-candidates" style="font-weight: bold;"></span> Candidates</h2>
+        </div>
+        <div class="section none turnout-div">
+          <h2 class="text" style="margin-bottom: 5px;">Electorate: <span class="electorate" style="font-weight: bold;"></span></h2>
+          <div class="turnout-chart-container"></div>
+          <h2 class="text" style="text-align: right; font-size: 15px;"><span class="turnout" style="font-weight: bold;"></span> Turnout</h2>
         </div>
       </div>
   </div>
