Enhance tooltip for majority

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
           <div class="turnout-chart-container"></div>
           <h2 class="text" style="text-align: right; font-size: 15px;"><span class="turnout" style="font-weight: bold;"></span> Turnout</h2>
         </div>
+        <div class="section none majority-div">
+          <div class="majority-chart-container"></div>
+        </div>
       </div>
   </div>
 </body>
