--- a/index.html
+++ b/index.html
@@ -79,8 +79,15 @@
 
   <div class="details">
     <div class="section results none">
-      <h2 class="header">GB Results - Seats</h2>
-      <div class="results-chart-container"></div>
+      <h2 class="header">GB Results</h2>
+      <div style="margin-bottom: 15px;">
+        <h2 class="header" style="font-size: 15px;">Seats</h2>
+        <div class="results-chart-container"></div>
+      </div>
+      <div>
+          <h2 class="header" style="font-size: 15px;">Votes</h2>
+          <div class="results-chart-votes-container"></div>
+      </div>
     </div>
     <div class="section changed none">
       <h2 class="header">GB Changes in Seats</h2>
