Implement details box for gain/hold

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
           <option value="results">Results</option>
           <option value="changed">Changed</option>
           <option value="gender">Gender</option>
+          <option value="female">Female Candidates</option>
           <option value="turnout">Turnout</option>
           <option value="majority">Majority</option>
           <option value="share">Party Share</option>
@@ -91,7 +92,7 @@
     </div>
     <div class="section changed none">
       <h2 class="header">GB Changes in Seats</h2>
-      <div class="results-chart-container"></div>
+      <div class="changed-chart-container"></div>
     </div>
   </div>
 </body>
