Add interaction to details box

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/checkbox.css" />
   </head>
 <body>
-  <div class="user-input">
+  <div class="user-input card">
     <form>
       <div>
         <select id="map-type">
@@ -43,7 +43,7 @@
   </div>
 
 
-  <div class="tooltip">
+  <div class="tooltip card">
     <h1 class="constituency"></h1>
     <div class="results">
         <div class="party-container">
@@ -78,9 +78,9 @@
     
   </div>
 
-  <div class="details">
+  <div class="details card">
     <div class="section results none">
-      <h2 class="header">GB Results</h2>
+      <h2 class="header">UK Results</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Seats</h2>
         <div class="results-chart-container"></div>
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div class="section changed none">
-      <h2 class="header">GB Changes in Seats</h2>
+      <h2 class="header">UK Changes in Seats</h2>
       <div class="changed-chart-container"></div>
     </div>
   </div>
