Implement national vote share

--- a/index.html
+++ b/index.html
@@ -91,8 +91,15 @@
       </div>
     </div>
     <div class="section changed none">
-      <h2 class="header">UK Changes in Seats</h2>
-      <div class="changed-chart-container"></div>
+      <h2 class="header">UK Changes</h2>
+      <div style="margin-bottom: 15px;">
+        <h2 class="header" style="font-size: 15px;">Seats</h2>
+        <div class="changed-chart-container"></div>
+      </div>
+      <div>
+          <h2 class="header" style="font-size: 15px;">Vote Share</h2>
+          <div class="changed-chart-votes-container"></div>
+      </div>
     </div>
   </div>
 </body>
