Implement gender details box

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
           <option value="results">Results</option>
           <option value="changed">Changed</option>
           <option value="gender">Gender</option>
-          <option value="female">Female Candidates</option>
           <option value="turnout">Turnout</option>
           <option value="majority">Majority</option>
           <option value="share">Party Share</option>
@@ -90,6 +89,7 @@
           <div class="results-chart-votes-container"></div>
       </div>
     </div>
+
     <div class="section changed none">
       <h2 class="header">UK Changes</h2>
       <div style="margin-bottom: 15px;">
@@ -99,6 +99,17 @@
       <div>
           <h2 class="header" style="font-size: 15px;">Vote Share</h2>
           <div class="changed-chart-votes-container"></div>
+      </div>
+    </div>
+    <div class="section gender none">
+      <h2 class="header">UK Gender Representation</h2>
+      <div style="margin-bottom: 15px;">
+        <h2 class="header" style="font-size: 15px;">Female Seats</h2>
+        <div class="gender-chart-container"></div>
+      </div>
+      <div>
+          <h2 class="header" style="font-size: 15px;">Female Candidates</h2>
+          <div class="gender-chart-candidates-container"></div>
       </div>
     </div>
   </div>
