Implement turnout details box

--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
           <div class="gender-chart-candidates-container"></div>
       </div>
     </div>
+    <div class="section turnout none">
+      <h2 class="header">UK Turnout</h2>
+      <div style="margin-bottom: 15px;">
+        <h2 class="header" style="font-size: 15px;">Histogram</h2>
+        <div class="turnout-chart-container"></div>
+      </div>
+    </div>
   </div>
 </body>
 <script src="dist/bundle.js"></script>
