Enhance turnout details box

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
         <div class="results-chart-container"></div>
       </div>
       <div>
-          <h2 class="header" style="font-size: 15px;">Votes</h2>
-          <div class="results-chart-votes-container"></div>
+        <h2 class="header" style="font-size: 15px;">Votes</h2>
+        <div class="results-chart-votes-container"></div>
       </div>
     </div>
 
@@ -97,8 +97,8 @@
         <div class="changed-chart-container"></div>
       </div>
       <div>
-          <h2 class="header" style="font-size: 15px;">Vote Share</h2>
-          <div class="changed-chart-votes-container"></div>
+        <h2 class="header" style="font-size: 15px;">Vote Share</h2>
+        <div class="changed-chart-votes-container"></div>
       </div>
     </div>
     <div class="section gender none">
@@ -108,8 +108,8 @@
         <div class="gender-chart-container"></div>
       </div>
       <div>
-          <h2 class="header" style="font-size: 15px;">Female Candidates</h2>
-          <div class="gender-chart-candidates-container"></div>
+        <h2 class="header" style="font-size: 15px;">Female Candidates</h2>
+        <div class="gender-chart-candidates-container"></div>
       </div>
     </div>
     <div class="section turnout none">
@@ -117,6 +117,13 @@
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Histogram</h2>
         <div class="turnout-chart-container"></div>
+      </div>
+      <div class="stats">
+        <h2 class="header" style="font-size: 15px;">Statistics</h2>
+        <p style="margin: 5px">National Average: <span id="turnout-average"></span></p>
+        <p style="margin: 5px">Standard Deviation: <span id="turnout-stdev"></span></p>
+        <p style="margin: 5px">Maximum: <span style="font-weight: bold" id="turnout-max"></span></p>
+        <p style="margin: 5px">Minimum: <span style="font-weight: bold" id="turnout-min"></span></p>
       </div>
     </div>
   </div>
