Implement majority details box

--- a/index.html
+++ b/index.html
@@ -126,6 +126,20 @@
         <p style="margin: 5px">Minimum: <span style="font-weight: bold" id="turnout-min"></span></p>
       </div>
     </div>
+    <div class="section majority none">
+      <h2 class="header">UK Majority</h2>
+      <div style="margin-bottom: 15px;">
+        <h2 class="header" style="font-size: 15px;">Histogram</h2>
+        <div class="majority-chart-container"></div>
+      </div>
+      <div class="stats">
+        <h2 class="header" style="font-size: 15px;">Statistics</h2>
+        <p style="margin: 5px">National Average: <span id="majority-average"></span></p>
+        <p style="margin: 5px">Standard Deviation: <span id="majority-stdev"></span></p>
+        <p style="margin: 5px">Maximum: <span style="font-weight: bold" id="majority-max"></span></p>
+        <p style="margin: 5px">Minimum: <span style="font-weight: bold" id="majority-min"></span></p>
+      </div>
+    </div>
   </div>
 </body>
 <script src="dist/bundle.js"></script>
