Implement title box

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <div>
       <select id="map-type">
         <option value="results">Results</option>
-        <option value="changed">Changed</option>
-        <option value="gender">Gender</option>
+        <option value="changed">Lost Constituencies</option>
+        <option value="gender">Gender Representation</option>
         <option value="turnout">Turnout</option>
         <option value="majority">Majority</option>
         <option value="share">Party Share</option>
@@ -51,6 +51,11 @@
           <span class="checkmark"></span>
       </label>
     </div>
+  </div>
+
+  <div class="card title-box">
+    <h1 id="title"></h1>
+    <h1 id="subtitle">lmao</h1>
   </div>
 
 
@@ -91,7 +96,7 @@
 
   <div class="details card">
     <div class="section results none">
-      <h2 class="header">UK Results</h2>
+      <h2 class="header">Results</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Seats</h2>
         <div class="results-chart-container"></div>
@@ -103,7 +108,7 @@
     </div>
 
     <div class="section changed none">
-      <h2 class="header">UK Changes</h2>
+      <h2 class="header">Lost Constituencies</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Seats</h2>
         <div class="changed-chart-container"></div>
@@ -114,7 +119,7 @@
       </div>
     </div>
     <div class="section gender none">
-      <h2 class="header">UK Gender Representation</h2>
+      <h2 class="header">Gender Representation</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Female Seats</h2>
         <div class="gender-chart-container"></div>
@@ -125,7 +130,7 @@
       </div>
     </div>
     <div class="section turnout none">
-      <h2 class="header">UK Turnout</h2>
+      <h2 class="header">Turnout</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Histogram</h2>
         <div class="turnout-chart-container"></div>
@@ -139,7 +144,7 @@
       </div>
     </div>
     <div class="section majority none">
-      <h2 class="header">UK Majority</h2>
+      <h2 class="header">Majority</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Histogram</h2>
         <div class="majority-chart-container"></div>
