--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
   <div style="position: absolute; right: 30px; bottom: 8px">
     <a href="./views/about.html" style="font-size: 12px;">about</a>
   </div>
-  <div class="user-input card">
+  <div class="user-input card collapsed">
+    <div class="toggle i-details card pointer highlightable">
+        <i class="fas fa-angle-left"></i>
+    </div>
     <div>
       <select id="map-type">
         <option value="results">Results</option>
@@ -55,7 +58,7 @@
 
   <div class="card title-box">
     <h1 id="title"></h1>
-    <h1 id="subtitle">lmao</h1>
+    <h1 id="subtitle"></h1>
   </div>
 
 
@@ -94,7 +97,7 @@
     
   </div>
 
-  <div class="details card">
+  <div class="details card collapsed">
     <div class="section results none">
       <h2 class="header">Results</h2>
       <div style="margin-bottom: 15px;">
@@ -156,6 +159,9 @@
         <p style="margin: 5px">Maximum: <span style="font-weight: bold" id="majority-max"></span></p>
         <p style="margin: 5px">Minimum: <span style="font-weight: bold" id="majority-min"></span></p>
       </div>
+    </div>
+    <div class="toggle t-details card pointer highlightable">
+        <i class="fas fa-angle-left"></i>
     </div>
   </div>
 </body>
