Fix charts on small screens

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
   <div class="details card collapsed none">
     <div class="section results none">
-      <h2 class="header">Results</h2>
+      <h2 class="header pointer highlightable">Results</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Seats</h2>
         <div class="results-chart-container"></div>
@@ -116,7 +116,7 @@
     </div>
 
     <div class="section changed none">
-      <h2 class="header">Lost Constituencies</h2>
+      <h2 class="header pointer highlightable">Lost Constituencies</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Seats</h2>
         <div class="changed-chart-container"></div>
@@ -127,7 +127,7 @@
       </div>
     </div>
     <div class="section gender none">
-      <h2 class="header">Gender Representation</h2>
+      <h2 class="header pointer highlightable">Gender Representation</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Female Seats</h2>
         <div class="gender-chart-container"></div>
@@ -138,7 +138,7 @@
       </div>
     </div>
     <div class="section turnout none">
-      <h2 class="header">Turnout</h2>
+      <h2 class="header pointer highlightable">Turnout</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Histogram</h2>
         <div class="turnout-chart-container"></div>
@@ -152,7 +152,7 @@
       </div>
     </div>
     <div class="section majority none">
-      <h2 class="header">Majority</h2>
+      <h2 class="header pointer highlightable">Majority</h2>
       <div style="margin-bottom: 15px;">
         <h2 class="header" style="font-size: 15px;">Histogram</h2>
         <div class="majority-chart-container"></div>
