--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./css/dropdown.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/checkbox.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="./css/loader.css" />
+  <link rel='shortcut icon' type='image/x-icon' href="./img/favicon.ico">
   </head>
 <body>
   <div class="map-controls">
