Fix tooltip display

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <div class="loader"></div>
 
-  <div class="tooltip card none">
+  <div class="tooltip card hidden">
     <h1 class="constituency"></h1>
     <div class="results">
         <div class="party-container">
