Fix tooltip on smaller screens

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div id="zoom-out" class="pointer highlightable box card hidden"><i class="fas fa-minus"></i></div>
     <div id="reset-zoom" class="pointer highlightable box card hidden"><i class="fas fa-redo-alt"></i></div>
   </div>
-  <div style="position: absolute; right: 30px; bottom: 8px">
+  <div class="about">
     <a href="./views/about.html" style="font-size: 12px;">about</a>
   </div>
   <div class="user-input card collapsed hidden">
@@ -166,7 +166,7 @@
         <p style="margin: 5px">Minimum: <span style="font-weight: bold" id="majority-min"></span></p>
       </div>
     </div>
-    <span class="text">Interact with the map by clicking on elements of the charts.</span>
+    <span class="text">Tap / Click on the elements of the charts to interact with the map.</span>
     <div class="toggle t-details card pointer highlightable">
         <i class="fas fa-angle-left"></i>
     </div>
