WIP have multiple elections results

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <i class="fas fa-angle-left"></i>
     </div>
     <div>
+      <select id="election-year">
+        <option value="2019">General Elections 2019</option>
+        <option value="2017">General Elections 2017</option>
+      </select>
+    </div>
+    <div>
       <select id="map-type">
         <option value="results">Results</option>
         <option value="changed">Lost Constituencies</option>
